fixed body's overflow // added props object to sections // adding once appearance to sections animation

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@ html {
 
 body {
   background-color: $background-color;
+  overflow: hidden;
 }
 
 button {
